<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OTP</string>
    <string name="title_activity_main_map" tools:ignore="ExtraTranslation">MainMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Profile</string>
    <string name="menu_slideshow">Ride History</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="map_search_image">Image of search edit text on map</string>
    <string name="phone">Phone Number</string>
    <string name="africa">AFRICA TAXI</string>
    <string name="titleName">Name</string>
    <string name="titlePhone">Phone Number </string>
    <string name="titleEmail">Email</string>
    <string name="editProfile">UPDATE PROFILE </string>
    <string name="saveProfile">SAVE PROFILE </string>
    <string name="verify">We Sent you a Message Containing the Verification Code </string>
    <string name="code">Verification Code</string>
    <string name="btnVerify">Verify</string>
    <string name="codeNotSend">You did Not get a code Send a gain</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
