<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerfiyPhoneActivity">

    <TextView
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/verify"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="#000"
            android:text="@string/code"
            android:layout_gravity="center"
            android:layout_width="270dp"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/etVerify"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="number"
            android:lineSpacingExtra="9sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/postTextColor"
            android:textColorHint="@color/inputFieldTextColor"
            android:textSize="14sp"
            tools:ignore="Autofill,LabelFor" />


        <Button
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="270dp"
            android:layout_height="45dp"
            android:text="@string/btnVerify"
            android:textColor="@color/postBackgroundColor"
            android:fontFamily="@font/swissra_normal"
            android:textSize="14sp"
            android:background="@drawable/btn_bg"
            android:id="@+id/btn_login"/>

        <TextView
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/codeNotSend"
            android:layout_width="270dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>