<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackgroundColor"
    android:fontFamily="@font/swissra_normal"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/map_search_image"
        android:src="@drawable/ic_close_red_30dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/icon_profile"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>


    <TextView

        android:textColor="#000"
        android:text="@string/titleName"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:inputType="text"
        android:lineSpacingExtra="9sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/postTextColor"
        android:textColorHint="@color/inputFieldTextColor"
        android:textSize="14sp" />


    <TextView
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/titlePhone"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etPhone"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:inputType="phone"
        android:lineSpacingExtra="9sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/postTextColor"
        android:textColorHint="@color/inputFieldTextColor"
        android:textSize="14sp" />


    <TextView
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:text="@string/titleEmail"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="9sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/postTextColor"
        android:textColorHint="@color/inputFieldTextColor"
        android:textSize="14sp" />

    <Button
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:background="#00FF00"
        android:text="@string/editProfile"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:layout_height="wrap_content" />

</LinearLayout>