<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/appBackgroundColor"
    android:fontFamily="@font/swissra_normal"
    tools:context=".RiderInfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/mainColor"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/icon_profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <androidx.cardview.widget.CardView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:background="@color/appBackgroundColor"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

           <ScrollView
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <LinearLayout
                   android:layout_marginTop="35dp"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <TextView
                       android:layout_marginTop="20dp"
                       android:textColor="#000"
                       android:text="@string/titleName"
                       android:layout_gravity="center"
                       android:layout_width="270dp"
                       android:layout_height="wrap_content" />


                   <EditText
                       android:id="@+id/etInfoName"
                       android:layout_width="270dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="20dp"

                       android:inputType="text"
                       android:lineSpacingExtra="9sp"
                       android:paddingStart="10dp"
                       android:paddingEnd="10dp"
                       android:textColor="@color/postTextColor"
                       android:textColorHint="@color/inputFieldTextColor"
                       android:textSize="14sp"
                       tools:ignore="Autofill,LabelFor" />


                   <TextView
                       android:textColor="#000"
                       android:text="@string/titleEmail"
                       android:layout_gravity="center"
                       android:layout_width="270dp"
                       android:layout_height="wrap_content" />


                   <EditText
                       android:id="@+id/etInfoEmail"
                       android:layout_width="270dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="20dp"
                       android:inputType="textEmailAddress"
                       android:lineSpacingExtra="9sp"
                       android:paddingStart="10dp"
                       android:paddingEnd="10dp"
                       android:textColor="@color/postTextColor"
                       android:textColorHint="@color/inputFieldTextColor"
                       android:textSize="14sp"
                       tools:ignore="Autofill,LabelFor" />


                   <TextView
                       android:textColor="#000"
                       android:text="@string/titlePhone"
                       android:layout_gravity="center"
                       android:layout_width="270dp"
                       android:layout_height="wrap_content" />


                   <EditText
                       android:id="@+id/etInfoPhone"
                       android:layout_width="270dp"
                       android:layout_height="45dp"
                       android:layout_gravity="center"
                       android:layout_marginTop="10dp"
                       android:layout_marginBottom="20dp"
                       android:inputType="phone"
                       android:lineSpacingExtra="9sp"
                       android:paddingStart="10dp"
                       android:paddingEnd="10dp"
                       android:textColor="@color/postTextColor"
                       android:textColorHint="@color/inputFieldTextColor"
                       android:textSize="14sp"
                       tools:ignore="Autofill,LabelFor" />


               </LinearLayout>
           </ScrollView>
        </androidx.cardview.widget.CardView>

        <Button
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="#00FF00"
            android:text="@string/saveProfile"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="270dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>